--- a/config/sway/config
+++ b/config/sway/config
@@ -38,6 +38,9 @@ set $terminal "kitty -1"
 # Main system font
 font pango:Noto Sans 12
 
+# Enable XWayland at startup because I start Spotify right away
+xwayland force
+
 # Change focus
 bindsym $mod+Left   focus left
 bindsym $mod+Down   focus down
@@ -78,7 +81,7 @@ bindsym $mod+$shift+space floating toggle
 floating_modifier $mod
 
 # Toggle focus between floating and tiling windows
-bindsym $mod+space  focus mode_toggle
+bindsym $mod+space focus mode_toggle
 
 # Reload sway
 bindsym $mod+$shift+r reload
@@ -194,28 +197,23 @@ smart_borders on
 ##################################################
 
 # generic floating rules
-for_window [class="floating"]                   floating enable, move position center
-for_window [title="floating"]                   floating enable, move position center
-for_window [app_id="floating"]                  floating enable, move position center
-for_window [title="(?i)about"]                  floating enable
-for_window [title="(?i)preferences"]            floating enable
-for_window [title="^Android Emulator - "]       floating enable
-for_window [window_role="about"]                floating enable
-for_window [window_role="bubble"]               floating enable
-for_window [window_role="pop-up"]               floating enable
-for_window [window_role="Preferences"]          floating enable
-for_window [window_role="task_dialog"]          floating enable
-for_window [window_type="dialog"]               floating enable
-for_window [window_type="menu"]                 floating enable
+for_window [class="floating"]             floating enable, move position center
+for_window [app_id="floating"]            floating enable, move position center
+for_window [title="(?i)about"]            floating enable
+for_window [title="(?i)preferences"]      floating enable
+for_window [title="^Android Emulator - "] floating enable
+for_window [window_type="dialog"]         floating enable
+for_window [window_role="popup_menu"]     floating enable
+for_window [window_type="menu"]           floating enable
+for_window [window_type="tooltip"]        floating enable
 
 # floating app rules
-for_window [app_id="blueman-manager"]           floating enable
-for_window [app_id="clipster"]                  floating enable, border pixel 2
-for_window [app_id="file-roller"]               floating enable, border pixel 2
-for_window [app_id="imv"]                       floating enable, border pixel 2
-for_window [app_id="qalculate-gtk"]             floating enable, border pixel 2
-for_window [app_id="wdisplays"]                 floating enable, border pixel 2
-for_window [app_id="zenity"]                    floating enable, border pixel 2
+for_window [app_id="blueman-manager"]   floating enable
+for_window [app_id="file-roller"]       floating enable, border pixel 2
+for_window [app_id="imv"]               floating enable, border pixel 2
+for_window [app_id="qalculate-gtk"]     floating enable, border pixel 2
+for_window [app_id="wdisplays"]         floating enable, border pixel 2
+for_window [app_id="zenity"]            floating enable, border pixel 2
 
 # sleep inhibition
 for_window [app_id="firefox"]     inhibit_idle fullscreen
@@ -234,29 +232,17 @@ for_window [class="Gpicview"]                   floating enable, border pixel 2,
 for_window [class="Pinentry-gtk-2"]             floating enable, border pixel 2, move position center
 for_window [class="lite"]                       floating enable, border pixel 2
 
-# all firefox windows except main window
-#   this has the side effect of making the main window floating for ~2 seconds
-#   before it sets its title, but has the benefit of not making other popups
-#   (such as Page info) jump from non-floating to floating
-for_window [app_id="firefox"]                   floating enable, border pixel 2
-for_window [title="— Mozilla Firefox$"]         floating disable, border none
-
-# TODO: finish cleaning up this
-for_window [class="Lxappearance"] floating enable
-for_window [class="Mojosetup"] floating enable
-for_window [class="nitrogen"] floating enable
-for_window [class="Parole"] floating enable
-for_window [class="Qalculate-gtk"] floating enable
-for_window [class="SimpleScreenRecorder"] floating enable
-for_window [class="spek"] floating enable
-for_window [class="torbrowser-launcher"] floating enable
-for_window [instance="file_progress"] floating enable
-for_window [instance="jetbrains-phpstorm" title="^ $"] floating enable
-for_window [instance="jetbrains-pycharm" title="^ $"] floating enable
-for_window [instance="sun-awt-X11-XDialogPeer"] floating enable
-for_window [title="Confirm Exit"] floating enable
-for_window [title="Minecraft Launcher"] floating enable
-for_window [title="Plugins"] floating enable
+# Firefox
+# sooooooooo :)
+# this config allows me to keep firefox's main window non-floating, while
+# making the "about" and "page info" popups floating, *while* avoiding the
+# non-floating->floating jump when spawning the "page info" popup, caused by
+# the fact that I match it with its title and Firefox sets its title quite late
+for_window [app_id="firefox"]                                 floating enable
+for_window [app_id="firefox" title="__focused__"]             floating disable
+for_window [app_id="firefox" title="Mozilla Firefox"]         floating disable
+for_window [app_id="firefox" title="^Page Info — "]           floating enable, border pixel 2
+for_window [app_id="firefox" title="^About Mozilla Firefox$"] floating enable, border pixel 2
 
 
 ##################################################
@@ -268,9 +254,9 @@ bindsym $mod+Return   exec $terminal
 bindsym $super+Return exec $terminal
 bindsym $super+e      exec "nemo"
 bindsym $super+f      exec "firefox"
-bindsym $super+c      exec "clipster -s"
-bindsym $super+v      exec "rofi-pass"
-bindsym $super+q      exec "rofimoji"
+bindsym $super+c      exec "clipman pick -t rofi"
+#bindsym $super+v      exec "rofi-pass"
+#bindsym $super+q      exec "rofimoji"
 
 # Program launcher
 # XXX: rofi doesn't always start on the currently focused monitor
@@ -352,10 +338,8 @@ bar {
   tray_padding 3
 
   height 39
-
-  hidden_state hide
-  mode hide
-  modifier $super
+  # XXX: merged upstream, waiting for new release
+  #workspace_min_width 37
 
   colors {
     background  #111111
@@ -369,18 +353,24 @@ bar {
     urgent_workspace    #f44336 #f44336 #ffffff
     binding_mode        #EF6C00 #EF6C00 #ffffff
   }
+
+  hidden_state hide
+  mode hide
+  modifier $super
 }
 
 # Secondary screen bar
 bar {
   output $secondary_monitor
   status_command i3blocks -c ~/.config/i3/blocks_secondary
-  position bottom
   font pango:Noto Sans, Awesome 12.5
+  position bottom
+  font pango:Noto Sans, Awesome 13.5
   tray_padding 3
 
-  height 37
-#  workspace_min_width 35
+  height 39
+  # XXX: merged upstream, waiting for new release
+  #workspace_min_width 37
 
   colors {
     background  #111111
@@ -394,6 +384,8 @@ bar {
     urgent_workspace    #f44336 #f44336 #ffffff
     binding_mode        #EF6C00 #EF6C00 #ffffff
   }
+
+  height 37
 }
 
 # Laptop screen bar
@@ -401,11 +393,12 @@ bar {
   output $laptop_monitor
   status_command i3blocks -c ~/.config/i3/blocks
   position bottom
-  font pango:Noto Sans, Awesome 12.5
+  font pango:Noto Sans, Awesome 13.5
   tray_padding 3
 
-  height 36
-#  workspace_min_width 37
+  height 39
+  # XXX: merged upstream, waiting for new release
+  #workspace_min_width 37
 
   colors {
     background  #111111
@@ -419,6 +412,9 @@ bar {
     urgent_workspace    #f44336 #f44336 #ffffff
     binding_mode        #EF6C00 #EF6C00 #ffffff
   }
+
+  font pango:Noto Sans, Awesome 12.5
+  height 36
 }
 
 
@@ -429,7 +425,7 @@ bar {
 input type:keyboard {
     xkb_layout "fr"
     xkb_options "caps:swapescape"
-    # makes firefox crash on sway reload :)
+    # XXX: makes firefox crash on sway reload :)
     # https://bugzilla.mozilla.org/show_bug.cgi?id=1652820
     #xkb_numlock "enabled"
     repeat_delay 200
@@ -444,6 +440,9 @@ input type:touchpad {
     tap enabled
     # disable "disable while typing" feature
     dwt disabled
+    # TODO: find a way to disable kinetic scrolling globally
+    # (ideally, set scroll source to "continous". see
+    # http://who-t.blogspot.com/2015/03/libinput-scroll-sources.html)
 }
 
 input type:pointer {
@@ -464,6 +463,7 @@ output $secondary_monitor mode 1920x1080 pos 2560,0 transform 270
 # Workspace assignments
 ##################################################
 
+# Workspace monitor assignments
 workspace 0 output $primary_monitor
 workspace 1 output $primary_monitor
 workspace 2 output $primary_monitor
@@ -471,10 +471,13 @@ workspace 3 output $primary_monitor
 workspace 4 output $secondary_monitor
 workspace 5 output $primary_monitor
 
-#assign [class="Caprine" window_role="browser-window"] $ws4
-#assign [class="discord" window_role="browser-window"] $ws4
-# Move to workspace for Spotify because they don't set window infos correctly
-#for_window [class="Spotify"] move to workspace $ws5
+# Windows workspace assignments
+assign [class="Caprine"] workspace 4
+for_window [class="Caprine"] move container to workspace 4
+assign [class="discord"] workspace 4
+for_window [class="discord"] move container to workspace 4
+assign [class="Spotify"] workspace 5
+for_window [class="Spotify"] move container to workspace 5
 
 
 ##################################################
@@ -516,4 +519,19 @@ exec_always swayidle \
   timeout 960 'swaymsg "output * dpms off"' \
     resume 'swaymsg "output * dpms on"'
 
-# XXX: TODO: start apps
+# Clipboard manager
+# (hook to store all copied text items)
+exec wl-paste -t text --watch clipman store --notify
+
+# Re-copy last copied item
+exec clipman restore
+
+# Start apps and switch to workspace 1
+workspace 1
+exec caprine
+exec firefox
+exec discord
+# Spotify needs to be started as late as possible because it segfaults if
+# XWayland is not yet initialized
+exec spotify
+workspace 1
