libinput-gestures: fix for wayland
Use ydotool instead of xdotool.

--- a/config/libinput-gestures.conf
+++ b/config/libinput-gestures.conf
@@ -32,19 +32,18 @@
 # have priority over the same gesture specified without any
 # finger_count.
 #
-# Typically command will be xdotool, or wmctrl. See "man xdotool" for
-# the many things you can action with that tool. Note that unfortunately
-# xdotool does not work with native Wayland clients.
 
+gesture swipe left  swaymsg workspace next
+gesture swipe right swaymsg workspace prev
 
-gesture swipe left	i3-msg workspace next
-gesture swipe right	i3-msg workspace prev
+# ydotool key list:
+# https://github.com/YukiWorkshop/libevdevPlus/blob/master/Resource.cpp
 
-gesture swipe up	xdotool key XF86Back
-gesture swipe down	xdotool key XF86Forward
+gesture swipe up    ydotool key KEY_BACK
+gesture swipe down  ydotool key KEY_FORWARD
 
-gesture pinch in	xdotool key ctrl+minus
-gesture pinch out	xdotool key ctrl+equal
+gesture pinch out   ydotool key Ctrl+KEY_KPPLUS
+gesture pinch in    ydotool key Ctrl+KEY_KPMINUS
 
 
 ###############################################################################
