sway: exec_always kanshi
encore un coup de M. Segfault à tous les coups ça

--- a/config/sway/config
+++ b/config/sway/config
@@ -510,7 +510,8 @@ exec "libinput-gestures-setup restart"
 
 # Automatic monitor configuration
 # (autorandr for Wayland)
-exec kanshi
+# Somehow it fucks up on reload so exec_always :/
+exec_always kanshi
 
 # Lock screen after 15 minutes of inactivity
 # But show warning 1 minute before
