kitty: work around slow scroll on Wayland

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -55,3 +55,6 @@ map kitty_mod+equal change_font_size all +0.5
 map kitty_mod+minus change_font_size all -0.5
 # Reset font size with mod+0 (à in azerty)
 map kitty_mod+0xe0 change_font_size all 0
+
+# Work around slow line-based scroll on Wayland
+touch_scroll_multiplier 12
