--- a/install-headless.conf.yaml
+++ b/install-headless.conf.yaml
@@ -15,6 +15,9 @@
     ~/.config/git:
       create: true
       path: config/git
+    ~/.config/htop:
+      create: true
+      path: config/htop
     ~/.tmux.conf:
     ~/.vim:
     ~/.zsh:
