dotbot: change git submodule update message
on a dit des commits A-TO-MIQUES

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -35,4 +35,4 @@
     ~/.zsh/.zshrc: ~/.zsh/zshrc
 
 - shell:
-    - [git submodule update --init --recursive, Installing submodules]
+    - [git submodule update --init --recursive, Updating git submodules]
