--- a/install-headless.conf.yaml
+++ b/install-headless.conf.yaml
@@ -28,4 +28,4 @@
     ~/.zsh/.zshrc: ~/.zsh/zshrc
 
 - shell:
-    - [git submodule update --init --recursive, Installing submodules]
+    - [git submodule update --init --recursive, Updating git submodules]
