mpv: improve volume controls

--- a/config/mpv/input.conf
+++ b/config/mpv/input.conf
@@ -4,8 +4,10 @@
 # other ones use intuitive letters
 #
 
-WHEEL_UP      add volume 2
-WHEEL_DOWN    add volume -2
+WHEEL_UP    add volume 4
+WHEEL_DOWN  add volume -4
+UP          add volume 4
+DOWN        add volume -4
 
 s cycle sub  # cycle through subtitles
 a cycle audio  # switch audio streams
