--- a/config/sway/config
+++ b/config/sway/config
@@ -23,7 +23,7 @@ set $shift  Shift
 
 # Monitors
 # (automatic monitor configuration is done by kanshi but these variables are
-# needed to force bars on certain monitors)
+# used later on for bar config)
 set $primary_monitor "Dell Inc. DELL U2721DE 89GN023"
 set $secondary_monitor "Dell Inc. DELL P2219HC GWDW8P2"
 set $laptop_monitor "eDP-1"
@@ -451,8 +451,8 @@ input type:pointer {
     scroll_factor 1.1
 }
 
-# "Desktop wallpaper" :)
-output * background "#111111" solid_color
+# Desktop wallpaper
+output * background "~/images/wallpapers/Own/lgbt.png" stretch
 
 # clamshell mode
 # TODO: test
