gestures: disable pinch-to-zoom, conflicts with Firefox

--- a/config/libinput-gestures.conf
+++ b/config/libinput-gestures.conf
@@ -42,8 +42,9 @@ gesture swipe right swaymsg workspace prev
 gesture swipe up    ydotool key KEY_BACK
 gesture swipe down  ydotool key KEY_FORWARD
 
-gesture pinch out   ydotool key Ctrl+KEY_KPPLUS
-gesture pinch in    ydotool key Ctrl+KEY_KPMINUS
+# Conflicts with Firefox's pinch-to-zoom
+#gesture pinch out   ydotool key Ctrl+KEY_KPPLUS
+#gesture pinch in    ydotool key Ctrl+KEY_KPMINUS
 
 
 ###############################################################################
